--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ body {
   background-color: #0472FF;
   border-radius: 2em;
   position: relative;
-  padding: 1em 1.25em;
+  padding: 1em 1.25em 0.75em;
   margin-right: 24px;
   color: white;
   font-size: 1.25em;
